--- a/tmpl8pi.vcxproj.filters
+++ b/tmpl8pi.vcxproj.filters
@@ -31,6 +31,8 @@
     <ClCompile Include="template\template.h">
       <Filter>template</Filter>
     </ClCompile>
+    <ClCompile Include="src\Triangle.cpp" />
+    <ClCompile Include="shaders\BasicVertexShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -46,6 +48,8 @@
     <ClInclude Include="template\sprite.h">
       <Filter>template</Filter>
     </ClInclude>
+    <ClInclude Include="src\Triangle.h" />
+    <ClInclude Include="shaders\BasicFragmentShader.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\font.png">
