--- a/tmpl8pi.vcxproj.filters
+++ b/tmpl8pi.vcxproj.filters
@@ -32,7 +32,6 @@
       <Filter>template</Filter>
     </ClCompile>
     <ClCompile Include="src\Triangle.cpp" />
-    <ClCompile Include="shaders\BasicVertexShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -49,7 +48,6 @@
       <Filter>template</Filter>
     </ClInclude>
     <ClInclude Include="src\Triangle.h" />
-    <ClInclude Include="shaders\BasicFragmentShader.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\font.png">
@@ -63,5 +61,7 @@
     <None Include="shaders\compute.comp">
       <Filter>assets\shaders</Filter>
     </None>
+    <None Include="shaders\BasicVertexShader.vert" />
+    <None Include="shaders\BasicFragmentShader.frag" />
   </ItemGroup>
 </Project>
