--- a/tmpl8pi.vcxproj
+++ b/tmpl8pi.vcxproj
@@ -143,6 +143,7 @@
     <IncludePath>/usr/include/libdrm;/usr/include/GLES2;/usr/include;/usr/include/x11;/usr/include/arm-linux-gnueabihf/c++/8;.;./template;$(IncludePath)</IncludePath>
     <MultiProcNumber>4</MultiProcNumber>
     <ValidateArchitecture>false</ValidateArchitecture>
+    <WSLPath>Debian</WSLPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='RelProf|ARM64'">
     <ValidateArchitecture>false</ValidateArchitecture>
